--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       <div class="resume_bottom">
         <div class="resume_item resume_namerole">
-          <div class="name">Ngoundo Morane C.</div>
+          <div class="name">Ngoundo Morane</div>
           <div class="role">Technicienne Logistique </div>
         </div>
         <div class="resume_item resume_profile">
@@ -110,7 +110,7 @@
 
     <div class="resume_right">
       <div class="resume_item resume_namerole">
-        <div class="name">Ngoundo Morane C.</div>
+        <div class="name">Ngoundo Morane</div>
         <div class="role">Technicienne Logistique </div>
       </div>
       <div class="resume_item resume_education">
