--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
   <div class="resume_wrapper">
     <div class="resume_left">
-      <div class="resume_image">
+      <!-- <div class="resume_image">
         <img src="images/morane.png" alt="Resume_image">
-      </div>
+      </div> -->
       <div class="resume_bottom">
         <div class="resume_item resume_namerole">
           <div class="name">Ngoundo Morane</div>
